--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'DU'
 - !lcsh 'Frontier and pioneer life -- Australia -- Queensland'
+- GITenberg
 title: Early Days in North Queensland
 url: http://www.gutenberg.org/ebooks/38649
